--- a/templates/base/header.html.twig
+++ b/templates/base/header.html.twig
@@ -6,7 +6,17 @@
     </div>
     <div class="Header-item">
         <a href="{{ url('app_index') }}" class="Header-link">
-            Berechnen
+            Wahlen
+        </a>
+    </div>
+    <div class="Header-item">
+        <a href="{{ url('app_index') }}" class="Header-link">
+            5. PK
+        </a>
+    </div>
+    <div class="Header-item">
+        <a href="{{ url('app_index') }}" class="Header-link">
+            AbiRechner
         </a>
     </div>
     {% if app.user %}
