--- a/templates/user_crud/_action_form.html.twig
+++ b/templates/user_crud/_action_form.html.twig
@@ -2,13 +2,13 @@
     <a class="BtnGroup-item btn btn-sm" href="{{ path('app_user_crud_edit', {'id': user.id}) }}"><i class="icon_pencil-edit"></i></a>
     <a class="BtnGroup-item btn btn-sm color-fg-attention" href="{{ path('app_user_crud_edit_password', {'id': user.id}) }}"><i class="icon_lock_alt"></i></a>
     {% if app.user is not same as user %}
-        <button form="form" class="BtnGroup-item btn btn-sm color-fg-danger"><i class="icon_trash"></i></button>
+        <button form="form_{{ user.id }}" class="BtnGroup-item btn btn-sm color-fg-danger"><i class="icon_trash"></i></button>
     {% else %}
-        <button disabled form="form" class="BtnGroup-item btn btn-sm color-fg-muted"><i class="icon_trash"></i></button>
+        <button disabled form="form_{{ user.id }}" class="BtnGroup-item btn btn-sm color-fg-muted"><i class="icon_trash"></i></button>
     {% endif %}
 
 </div>
 
-<form id="form" method="post" class="d-inline-block" action="{{ path('app_user_crud_delete', {'id': user.id}) }}" onsubmit="return confirm('Möchten Sie wirklich diesen Eintrag löschen?');">
+<form id="form_{{ user.id }}" method="post" class="d-inline-block" action="{{ path('app_user_crud_delete', {'id': user.id}) }}" onsubmit="return confirm('Möchten Sie wirklich diesen Eintrag löschen?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
 </form>
