--- a/templates/grade/_action_form.html.twig
+++ b/templates/grade/_action_form.html.twig
@@ -1,8 +1,8 @@
 <div class="BtnGroup-item">
     <a class="BtnGroup-item btn btn-sm" href="{{ path('app_grade_edit', {'id': grade.id}) }}"><i class="icon_pencil-edit"></i></a>
-    <button form="form" class="BtnGroup-item btn btn-sm color-fg-danger"><i class="icon_trash_alt"></i></button>
+    <button form="form_{{ grade.id }}" class="BtnGroup-item btn btn-sm color-fg-danger"><i class="icon_trash_alt"></i></button>
 </div>
 
-<form id="form" method="post" action="{{ path('app_grade_delete', {'id': grade.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form id="form_{{ grade.id }}" method="post" action="{{ path('app_grade_delete', {'id': grade.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ grade.id) }}">
 </form>
