--- a/templates/pupil_crud/_action_form.html.twig
+++ b/templates/pupil_crud/_action_form.html.twig
@@ -1,9 +1,9 @@
 <div class="BtnGroup-item">
-    <a class="BtnGroup-item btn btn-sm" href="{{ path('app_pupil_crud_edit', {'id': exam.id}) }}"><i class="icon_pencil-edit"></i></a>
-    <button form="form" class="BtnGroup-item btn btn-sm color-fg-danger"><i class="icon_trash_alt"></i></button>
+    <a class="BtnGroup-item btn btn-sm" href="{{ path('app_pupil_crud_exam_edit', {'id': exam.id}) }}"><i class="icon_pencil-edit"></i></a>
+    <button form="form_{{ exam.id }}" class="BtnGroup-item btn btn-sm color-fg-danger"><i class="icon_trash_alt"></i></button>
 </div>
 
 
-<form id="form" method="post" class="d-inline-block" action="{{ path('app_teacher_crud_delete', {'id': exam.id}) }}" onsubmit="return confirm('Möchten Sie wirklich diesen Eintrag löschen?');">
+<form id="form_{{ exam.id }}" method="post" class="d-inline-block" action="{{ path('app_pupil_crud_exam_delete', {'id': exam.id}) }}" onsubmit="return confirm('Möchten Sie wirklich diesen Eintrag löschen?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ exam.id) }}">
 </form>
