--- a/templates/_admin.html.twig
+++ b/templates/_admin.html.twig
@@ -8,8 +8,8 @@
             <div class="UnderlineNav-body">
                 <a href="{{ url('app_pupil_crud_index') }}" class="UnderlineNav-item" {{ local_nav == 'pupil' ? 'aria-current="true"' : '' }}><i class="cil-group mr-1"></i>Prüflinge</a>
                 <a href="{{ url('app_exam_index') }}" class="UnderlineNav-item" {{ local_nav == 'exam' ? 'aria-current="true"' : '' }}><i class="cil-school mr-1"></i>Prüfungen</a>
-                <a class="UnderlineNav-item"><i class="cil-library-add mr-1"></i>Import</a>
-                <a class="UnderlineNav-item"><i class="cil-cloud-download mr-1"></i>Export</a>
+                <a href="{{ url('app_data_import') }}" class="UnderlineNav-item" {{ local_nav == 'import' ? 'aria-current="true"' : '' }}><i class="cil-library-add mr-1"></i>Import</a>
+                <a class="UnderlineNav-item" {{ local_nav == 'export' ? 'aria-current="true"' : '' }}><i class="cil-cloud-download mr-1"></i>Export</a>
             </div>
             <div class="UnderlineNav-actions">
                     {% if is_granted('ROLE_ADMIN') %}
