--- a/templates/_exam.html.twig
+++ b/templates/_exam.html.twig
@@ -4,12 +4,7 @@
     <div class="p-3">
         <h4>Schnellzugriff</h4>
     </div>
-    <div class="SideNav mb-3">
-        <a href="{{ url('app_pupil_crud_index') }}" class="SideNav-item">
-            <i class="cil cil-group SideNav-icon"></i>
-            Alle Prüflinge
-        </a>
-    </div>
+    {% block actions %}{% endblock %}
 {% endblock %}
 
 {% block body %}
