--- a/templates/exam/index.html.twig
+++ b/templates/exam/index.html.twig
@@ -30,7 +30,7 @@
             <tbody>
             {% for exam in exams %}
                 <tr>
-                    <td class="text-left">{{ exam.pupil.teacher.lastname }}</td>
+                    <td class="text-left">{{ exam.pupil.teacher.lastname|default('- ohne Zuordnung -') }}</td>
                     <td class="text-left">
                         <a class="color-fg-default" href="{{ path('app_pupil_crud_show', {'id': exam.pupil.id}) }}">
                             {{ exam.pupil }}
@@ -45,5 +45,61 @@
             {% endfor %}
             </tbody>
         </table>
+    </div>
+    <div>
+        <canvas id="myChart" style="max-height: 500px"></canvas>
+        <script>
+            {% set generic = 0 %}
+            {% set genericCount = 0 %}
+            const ctx = document.getElementById('myChart');
+
+            const labels ='';
+            const data = {
+                datasets: [{
+                    label: 'Empfehlungen',
+                    data: {
+                        {% for key, value in chart_data  %}
+                            '{{  key }}': '{{ value }}',
+                        {% endfor %}
+                    },
+                    backgroundColor: [
+                        '#d0d7de',
+                    ],
+                    borderWidth: 0,
+                }]
+            };
+
+            new Chart(ctx, {
+                type: 'bar',
+                data: data,
+                options: {
+                    responsive: true,
+                    legend: {
+                        position: 'bottom',
+                    },
+                    hover: {
+                        mode: 'label'
+                    },
+
+                    plugins: {
+                        title: {
+                            display: true,
+                            text: 'Empfohlene Zusatzprüfungen nach Häufigkeit der Fächer'
+                        },
+                        legend: {
+                            display: false
+                        },
+                    },
+                    scales: {
+                        y: {
+                            ticks: {
+                                // forces step size to be 50 units
+                                stepSize: 1
+                            }
+                        }
+                    }
+                }
+            });
+        </script>
     </div>
 {% endblock %}
