--- a/templates/pupil_crud/index.html.twig
+++ b/templates/pupil_crud/index.html.twig
@@ -35,7 +35,7 @@
                         <tbody>
                         {% for pupil in pupils %}
                         <tr class="border-bottom">
-                            <td class="">{{ pupil.teacher.lastname|default('') }}</td>
+                            <td class="">{{ pupil.teacher.lastname|default('- keine Zuordnung -') }}</td>
                             <th class=" text-left">
                                 <a class="color-fg-default" href="{{ path('app_pupil_crud_show', {'id': pupil.id}) }}">
                                     {{ pupil.lastname }}
