--- a/templates/_pupil.html.twig
+++ b/templates/_pupil.html.twig
@@ -9,9 +9,13 @@
             <i class="cil cil-group SideNav-icon"></i>
             Alle Prüflinge
         </a>
+        <a href="{{ url('app_pupil_crud_edit',{'id':pupil.id}) }}" class="SideNav-item">
+            <i class="cil cil-group SideNav-icon"></i>
+            Datensatz bearbeiten
+        </a>
         <a href="{{ url('app_pupil_crud_export_pdf',{'id':pupil.id}) }}" class="SideNav-item">
             <i class="cil cil-cloud-download SideNav-icon"></i>
-            Datenblatt exportieren
+            Datensatz exportieren
         </a>
     </div>
 {% endblock %}
