--- a/templates/data/import.html.twig
+++ b/templates/data/import.html.twig
@@ -2,7 +2,7 @@
 
 {% block actions %}
     <div class="SideNav mb-3">
-        <a href="{{ url('app_pupil_crud_index') }}" class="SideNav-item">
+        <a href="{{ url('app_data_export_pupil') }}" class="SideNav-item">
             <i class="cil cil-group SideNav-icon"></i>
             Daten exportieren
         </a>
