--- a/templates/pupil_crud/edit.html.twig
+++ b/templates/pupil_crud/edit.html.twig
@@ -89,7 +89,7 @@
     <div class="form-group mt-5">
         <div class="form-group-body">
             <button type="submit" class="btn btn-outline mr-1"  id="lastname">Aktualisieren</button>
-            <a href="{{ url('app_pupil_crud_index') }}"  class="btn">Abbrechen</a>
+            <a href="{{ url('app_pupil_crud_show',{'id':pupil.id}) }}"  class="btn">Abbrechen</a>
         </div>
     </div>
 
