add export functions

--- a/templates/_pupil.html.twig
+++ b/templates/_pupil.html.twig
@@ -15,7 +15,7 @@
         </a>
         <a href="{{ url('app_pupil_crud_export_pdf',{'id':pupil.id}) }}" class="SideNav-item">
             <i class="cil cil-cloud-download SideNav-icon"></i>
-            Datensatz exportieren
+            PDF exportieren
         </a>
     </div>
 {% endblock %}
