--- a/templates/_pupil.html.twig
+++ b/templates/_pupil.html.twig
@@ -10,8 +10,8 @@
             Alle Prüflinge
         </a>
         <a href="{{ url('app_pupil_crud_edit',{'id':pupil.id}) }}" class="SideNav-item">
-            <i class="cil cil-group SideNav-icon"></i>
-            Datensatz bearbeiten
+            <i class="cil cil-user SideNav-icon"></i>
+            Stammdaten bearbeiten
         </a>
         <a href="{{ url('app_pupil_crud_export_pdf',{'id':pupil.id}) }}" class="SideNav-item">
             <i class="cil cil-cloud-download SideNav-icon"></i>
