--- a/templates/data/import.html.twig
+++ b/templates/data/import.html.twig
@@ -51,6 +51,7 @@
         <div  class="Box color-border-success-emphasis color-bg-success mx-auto border p-3 rounded-2 mb-5">
             <h3>Daten überprüfen und speichern</h3>
             <span>Bitte überprüfen Sie die erfassten Daten. Sollte alles korrekt sein, können Sie die neuen Daten speichern.</span>
+            <span class="d-block">Vom System erkannte Fehler sind meist darauf zurückzuführen, dass die Kürzel der Fächer oder Tutoren inkorrekt sind oder noch nicht in der Datenbank hinterlegt wurden.</span>
         </div>
         <div class="mt-5">
             <table class="compact hovering" id="simple" data-page-length="25">
@@ -62,6 +63,17 @@
                     <th class=" text-left">Geburtsdatum</th>
                     <th class=" text-left">Abschlussjahr</th>
                     <th class=" text-left">Kursblock</th>
+                    <th class=" text-left">LK 1</th>
+                    <th class=" text-left">Punkte</th>
+                    <th class=" text-left">LK 2</th>
+                    <th class=" text-left">Punkte</th>
+                    <th class=" text-left">GK 3</th>
+                    <th class=" text-left">Punkte</th>
+                    <th class=" text-left">GK 4</th>
+                    <th class=" text-left">Punkte</th>
+                    <th class=" text-left">5. PK</th>
+                    <th class=" text-left">Punkte</th>
+                    <th class=" text-left">Tutorium</th>
                 </tr>
                 </thead>
                 <tbody>
