--- a/templates/_pupil.html.twig
+++ b/templates/_pupil.html.twig
@@ -5,18 +5,7 @@
         <h4>Schnellzugriff</h4>
     </div>
     <div class="SideNav mb-3">
-        <a href="{{ url('app_pupil_crud_index') }}" class="SideNav-item">
-            <i class="cil cil-group SideNav-icon"></i>
-            Alle Prüflinge
-        </a>
-        <a href="{{ url('app_pupil_crud_edit',{'id':pupil.id}) }}" class="SideNav-item">
-            <i class="cil cil-user SideNav-icon"></i>
-            Stammdaten bearbeiten
-        </a>
-        <a href="{{ url('app_pupil_crud_export_pdf',{'id':pupil.id}) }}" class="SideNav-item">
-            <i class="cil cil-cloud-download SideNav-icon"></i>
-            PDF exportieren
-        </a>
+        {% block actions %}{% endblock %}
     </div>
 {% endblock %}
 
