--- a/templates/pupil_crud/show.html.twig
+++ b/templates/pupil_crud/show.html.twig
@@ -1,5 +1,20 @@
 {% extends '_pupil.html.twig' %}
 
+{% block actions %}
+    <a href="{{ url('app_pupil_crud_index') }}" class="SideNav-item">
+        <i class="cil cil-group SideNav-icon"></i>
+        Alle Prüflinge
+    </a>
+    <a href="{{ url('app_pupil_crud_edit',{'id':pupil.id}) }}" class="SideNav-item">
+        <i class="cil cil-user SideNav-icon"></i>
+        Stammdaten bearbeiten
+    </a>
+    <a href="{{ url('app_pupil_crud_export_pdf',{'id':pupil.id}) }}" class="SideNav-item">
+        <i class="cil cil-cloud-download SideNav-icon"></i>
+        PDF exportieren
+    </a>
+{% endblock %}
+
 {% block page_header %}
 <div class=" d-flex flex-justify-between flex-items-baseline flex-wrap mb-5">
     <div>
