--- a/templates/teacher_crud/_form.html.twig
+++ b/templates/teacher_crud/_form.html.twig
@@ -22,6 +22,17 @@
         </div>
     </div>
 </div>
+<div class="form-group">
+    <div class="form-group-header">
+        {{ form_label(form.abbreviation,form.abbreviation,{'label_attr': {'class':'required'} }) }}
+    </div>
+    <div class="form-group-body">
+        {{ form_widget(form.abbreviation,{'attr': {'class':'form-control width-full'} }) }}
+        <div class="invalid-feedback color-fg-danger my-2">
+            Bitte Kürzel der Lehrkraft angeben.
+        </div>
+    </div>
+</div>
 <div class="form-group mt-5">
     <div class="form-group-body">
         <button class="btn btn-outline mr-2">{{ button_label|default('Speichern') }}</button>
