--- a/templates/data/import.html.twig
+++ b/templates/data/import.html.twig
@@ -94,7 +94,7 @@
 
                         <div class="form-group mb-5">
                             <div class="form-group-header">
-                                <label for="teachers">Tutorium zuordnen</label>
+                                <label for="teachers">Tutorium zuordnen (überschreiben)</label>
                             </div>
                             <div class="form-group-body">
                                 <select id="teachers" class="form-select width-full" name="teacher">
